--- a/index.html
+++ b/index.html
@@ -21,18 +21,26 @@
             </select>
 
             <h3 class="mt-4">Select Items</h3>
-            <div class="btn-group">
-                <!-- Tile buttons for items -->
-                           <!-- Tile buttons for items -->
-                <button class="btn btn-primary itemBtn">පාන් </button>
-                <button class="btn btn-primary itemBtn">T බනිස් </button>
-                <button class="btn btn-primary itemBtn">කුඩු බනිස් </button>
-                <button class="btn btn-primary itemBtn">ක්‍රීම් බනිස්   </button>
-                <button class="btn btn-primary itemBtn">වියනා </button>
-                <button class="btn btn-primary itemBtn">මලූ පාන් </button>
-                <button class="btn btn-primary itemBtn">සිනි සම්බල් </button>
-                <button class="btn btn-primary itemBtn">ජෑම් බනිස් </button>
-                <!-- Add more item buttons as needed -->
+      <div class="row">
+                <div class="col-md-4">
+                    <!-- First column for items -->
+                    <button class="btn btn-primary btn-block itemBtn">පාන්</button>
+                    <button class="btn btn-primary btn-block itemBtn">T බනිස්</button>
+                     <button class="btn btn-primary btn-block itemBtn">ජෑම් බනිස්</button>
+                </div>
+                <div class="col-md-4">
+                    <!-- Second column for items -->
+                    <button class="btn btn-primary btn-block itemBtn">කුඩු බනිස්</button>
+                    <button class="btn btn-primary btn-block itemBtn">ක්‍රීම් බනිස්</button>
+                </div>
+                <div class="col-md-4">
+                    <!-- Third column for items -->
+                    <button class="btn btn-primary btn-block itemBtn">වියනා</button>
+                    <button class="btn btn-primary btn-block itemBtn">මලූ පාන්</button>
+                    <button class="btn btn-primary btn-block itemBtn">සිනි සම්බල්</button>
+                   
+                    <!-- Add more item buttons as needed -->
+                </div>
             </div>
         </div>
 
