--- a/index.html
+++ b/index.html
@@ -251,8 +251,18 @@
   { id: 'item55', name: '1 1/2kg අයිසින්' },
   { id: 'item56', name: '2 kg අයිසින්' },
   { id: 'item57', name: '160 අයිසින් කෑලි' },
-  { id: 'item58', name: 'වෙනත්' },
   { id: 'item59', name: 'අමතර' },
+  { id: 'item60', name: 'තැටි පාන්' },
+  { id: 'item61', name: 'ලාවා කේක්' },
+  { id: 'item62', name: 'ඥාන කතා' },
+  { id: 'item63', name: 'ඩිමයි' },
+  { id: 'item64', name: 'බිස්කට් කුඩු' },
+  { id: 'item65', name: 'ඩේසිකට්' },
+  { id: 'item66', name: 'ඉදි ක්කේ ගෙඩි' },
+  { id: 'item67', name: 'ඇගිලි කූරු' },
+  { id: 'item68', name: 'බේබි රසක්' },
+  { id: 'item69', name: 'වෙනත් 1' },
+  { id: 'item70', name: 'වෙනත් 2' }
                 // Add more items as needed
             ];
 
